@@ -68,7 +68,7 @@
               <object class="GtkLabel" id="title_lbl">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0.0099999997764825821</property>
+                <property name="xalign">0</property>
                 <property name="xpad">24</property>
                 <property name="label" translatable="yes">_Title:</property>
                 <property name="use_underline">True</property>
